--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	Access-Control-Allow-Origin: *
 	<meta charset="utf-8">
 	<title>API Fun</title>
 	<script>
@@ -10,23 +9,23 @@
 			request = new XMLHttpRequest();
 
 			request.open("GET", "www.thecocktaildb.com/api/json/v1/1/random.php", true);
-
-			request.onreadystatechange = function() {
-				if (request.readyState == 4 && request.status == 200) {
-					result = request.responseText;
-					random = JSON.parse(result);
-
-					strHTML += random.strDrink + ": </br>" + random.strInstructions;
-					document.getElementById("rand").innerHTML = strHTML;
-
-				} else if (request.readyState == 4 && request.status != 200) {
-					document.getElementById("rand").innerHTML = "Request failed!";
-				} else if (request.readyState == 3) {
-					document.getElementById("rand").innerHTML = "Try again.";
-				}
-			}
 			request.send();
+		//	request.onreadystatechange = function() {
+			if (request.readyState == 4 && request.status == 200) {
+				result = request.responseText;
+				random = JSON.parse(result);
+
+				strHTML += random.strDrink + ": </br>" + random.strInstructions;
+				document.getElementById("rand").innerHTML = strHTML;
+
+			} else if (request.readyState == 4 && request.status != 200) {
+				document.getElementById("rand").innerHTML = "Request failed!";
+			} else if (request.readyState == 3) {
+				document.getElementById("rand").innerHTML = "Try again.";
+			}
 		}
+			
+		//}
 	</script>
 </head>
 <body onload="loadData()">
